@@ -14,7 +14,7 @@ export(anova.gam, bam, bam.update,bandchol, betar, cox.ph,concurvity,
        gaulss,gam.side,get.var,gevlss,
        influence.gam, 
        in.out,inSide,interpret.gam,initial.sp,
-       jagam,ldetS, 
+       jagam,k.check,ldetS, 
        ldTweedie,
        logLik.gam,ls.size,
        magic, magic.post.proc, model.matrix.gam,mini.roots,
